# soa

./: .clang-format  .clang-tidy  CMakeLists.txt
cmake/: TestCoverage.cmake
include/soa/: MultiArrayList.hpp
test/: MultiArrayList.cpp
